[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >='3.7'"
	]
build-backend = "flit_core.buildapi"

[project]
name = "regression"
authors = [{name = "Ashvin Ravi", email = "ashvin.ravi@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest", "numpy", "scikit-learn", "regression" 
]

[project.urls]
Home = "https://github.com/BMI203-2024/HW7-REgression"
